Primer Push: Se agregan estilos globales y fonts

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,68 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
+
 <head>
   <meta charset="utf-8">
-  <title>FRInterno</title>
+
+   <!-- Disable Pinch Zoom on Mobile Web -->
+   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+   <!-- Disable Zoom: For devices that can't use viewport-->
+  <meta name="HandheldFriendly" content="true" />
+
+  <!-- Metas de datos de la pagina para previsualizacion -->
+  <meta name="description" content="Control interno de Foto Rodriguez">
+  <meta property="og:title" content="FR Interno" />
+  <meta property="og:url" content="https://www.frinterno.ml/" />
+  <meta property="og:description" content="Control interno de Foto Rodriguez">
+  <meta property="og:image" content="">
+  <meta property="og:type" content="article" />
+  <meta property="og:locale" content="es_ES" />
+
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="shortcut icon" type="image/png" href="assets/icons/apple-touch-icon.png">
+
+  <!-- PWA -->
+  <link rel="manifest" href="manifest.webmanifest">
+  <meta name="theme-color" content="#303841">
+
+  <!-- Android  -->
+  <meta name="mobile-web-app-capable" content="yes">
+
+  <!-- iOS -->
+  <meta name="apple-mobile-web-app-title" content="Application Title">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
+
+  <!-- Pinned Sites  -->
+  <meta name="application-name" content="FR Interno">
+  <meta name="msapplication-tooltip" content="FR Interno">
+  <meta name="msapplication-starturl" content="/">
+
+  <!-- Orientation  -->
+  <meta name="screen-orientation" content="portrait">
+
+  <!-- iOS  -->
+  <!-- <link rel="apple-touch-icon" href="assets/icons/apple-touch-icon.png">
+  <link rel="apple-touch-icon" href="assets/icons/icon-76x76.png" sizes="76x76">
+  <link rel="apple-touch-icon" href="assets/icons/icon-120x120.png" sizes="120x120">
+  <link rel="apple-touch-icon" href="assets/icons/icon-152x152.png" sizes="152x152">
+  <link rel="apple-touch-icon" href="assets/icons/icon-180x180.png" sizes="180x180"> -->
+
+  <!-- Pinned Tab  -->
+  <!-- <link rel="mask-icon" href="assets/icons/safari-pinned-tab.svg" size="any"> -->
+
+  <!-- Startup Image  -->
+  <!-- <link rel="apple-touch-startup-image" href="assets/images/splash.jpg"> -->
+
+  <title>FR Interno</title>
+
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
